--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 <body>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Davitomix</a>
+      <a class="navbar-brand" href="#">👨‍💻&nbsp;Davitomix</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">🚀&nbsp;Projects</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">📝&nbsp;Contact</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">🤓&nbsp;About</a>
           </li>
         </ul>
       </div>
