--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <title>David's Portfolio</title>
 </head>
 <body>
+  <!-- #region nav-cont -->
   <div class="container nav-cont">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">👨‍💻&nbsp;Davitomix</a>
@@ -39,9 +40,47 @@
       </div>
     </nav>
   </div>
-  <div class="container header-cont">
+  <!-- #endregion -->
 
-  </div>
+  <!-- #region main-->
+  <main class="container">
+      <!-- #region hdr-cont -->
+      <div class="row hdr-cont">
+
+      </div>
+      <!-- #endregion -->
+
+      <!-- #region sub-hdr -->
+      <div class="row sub-hdr">
+
+      </div>
+      <!-- #endregion -->
+
+      <!-- #region proj-title -->
+      <div class="row pjct-title">
+
+      </div>
+      <!-- #endregion -->
+
+      <!-- #region proj-body -->
+      <div class="row row-cols-1 justify-content-center pjct-cont">
+        <div class="pjct-box"></div>
+        <div class="pjct-box"></div>
+        <div class="pjct-box"></div>
+        <div class="pjct-box"></div>
+        <div class="pjct-box"></div>
+      </div>
+      <!-- #endregion -->
+
+      <!-- #region cntct-cont -->
+      <div class="row cntct-cont">
+
+      </div>
+      <!-- #endregion -->
+  </main>
+  <!-- #endregion -->
+  <footer class="container footr-cont">
+  </footer>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
