--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- #region nav-cont -->
   <div class="container nav-cont">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">👨‍💻&nbsp;Davitomix</a>
+      <a class="navbar-brand" href="#">⚡️&nbsp;David García</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -46,7 +46,11 @@
   <main class="container">
       <!-- #region hdr-cont -->
       <div class="row hdr-cont">
-
+        <div class="col-md-12 d-flex flex-column justify-content-center align-items-center">
+          <h1>David García 👨🏻‍💻</h1>
+          <h3>Im a Full Stack Web Developer, My passion is to create, innovate, build and learn Tech. 🤖❤️🎯</h3>
+          <h3>Checkout some of my projects below.</h3>
+        </div>
       </div>
       <!-- #endregion -->
 
