Working on header

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <h1>David García 👨🏻‍💻</h1>
           <h3>Im a Full Stack Web Developer, My passion is to create, innovate, build and learn Tech. 🤖❤️🎯</h3>
           <h3>Checkout some of my projects below.</h3>
+          <img class="hdr-cover" src="assets/images/flame-remote-working.png" alt="programming">
         </div>
       </div>
       <!-- #endregion -->
