header and subheader implemented

--- a/index.html
+++ b/index.html
@@ -57,13 +57,30 @@
 
       <!-- #region sub-hdr -->
       <div class="row sub-hdr">
-
+        <div class="col-12 col-sm-12 d-flex justify-content-center align-items-center order-0 bx-1">
+          <h2>Info & Skills</h2>
+        </div>
+        <div class="col-12 col-sm-12 col-lg-6 sub-cover d-flex justify-content-center align-items-center order-2 bx-2">
+          <img src="assets/images/flame-design-science.png" alt="design">
+        </div>
+        <div class="col-12 col-sm-12 col-lg-6 sub-txt d-flex justify-content-center align-items-center order-1 bx-3">
+          <h3>
+            I'm baby waistcoat DIY ugh, viral hella tofu hashtag ramps taiyaki heirloom asymmetrical sriracha. Before they 
+            sold out vaporware street art, tilde tumeric portland banjo. Williamsburg raclette unicorn sriracha vaporware enamel 
+            pin farm-to-table locavore, af four loko live-edge small batch trust fund helvetica schlitz. Kinfolk synth small batch chia. 
+            You probably haven't heard of them biodiesel brunch iPhone keytar YOLO coloring book art party glossier mlkshk chicharrones cliche. 
+            Flexitarian mlkshk kickstarter 3 wolf moon actually VHS single-origin coffee craft beer gastropub mixtape dreamcatcher. 
+            Tbh vaporware meh retro salvia air plant +1 selfies listicle cornhole gentrify ugh master cleanse.
+          </h3>
+        </div>
       </div>
       <!-- #endregion -->
 
       <!-- #region proj-title -->
       <div class="row pjct-title">
-
+        <div class="col-12 col-sm-12 d-flex justify-content-center align-items-center order-0 bx-1">
+          <h2>Projects</h2>
+        </div>
       </div>
       <!-- #endregion -->
 
