Adding project to page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       <!-- #region sub-hdr -->
       <div class="row sub-hdr">
         <div class="col-12 col-sm-12 d-flex justify-content-center align-items-center order-0 bx-1">
-          <h2>Info & Skills</h2>
+          <div class="info-skills">
+            <h2>Info & Skills</h2>
+          </div>
         </div>
         <div class="col-12 col-sm-12 col-lg-6 sub-cover d-flex justify-content-center align-items-center order-2 bx-2">
           <img src="assets/images/flame-design-science.png" alt="design">
@@ -79,12 +81,14 @@
       <!-- #region proj-title -->
       <div class="row pjct-title">
         <div class="col-12 col-sm-12 d-flex justify-content-center align-items-center order-0 bx-1">
-          <h2>Projects</h2>
+          <div class="projects">
+            <h2>Projects</h2>
+          </div>
         </div>
       </div>
       <!-- #endregion -->
 
-      <!-- #region proj-body -->
+      <!-- #region proj-cont -->
       <div class="row row-cols-1 justify-content-center pjct-cont">
         <div class="pjct-box"></div>
         <div class="pjct-box"></div>
