Styling projects and positioning images

--- a/index.html
+++ b/index.html
@@ -90,7 +90,16 @@
 
       <!-- #region proj-cont -->
       <div class="row row-cols-1 justify-content-center pjct-cont">
-        <div class="pjct-box"></div>
+        <div class="pjct-box d-flex flex-row">
+          <div class="col-6 pjct-back">
+          </div>
+          <div class="col-6 pjct-content">
+            <h4>Moto Rocket Mx</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
+              officia quia similique optio?</p>
+          </div>
+        </div>
         <div class="pjct-box"></div>
         <div class="pjct-box"></div>
         <div class="pjct-box"></div>
