Added hover effect and changes images over the images projects

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
       <div class="row row-cols-1 justify-content-center pjct-cont">
         <div class="pjct-box d-flex flex-row">
           <div class="col-6 pjct-back">
+            <div class="bckg-img">
+            </div>
           </div>
           <div class="col-6 pjct-content">
             <h4>Moto Rocket Mx</h4>
