Styling buttons of projects

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Live Demo</a>
+                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
                 </button>
               </div>
               <div class="skill-link">
@@ -408,7 +408,7 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Live Demo</a>
+                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
                 </button>
               </div>
               <div class="skill-link">
@@ -578,7 +578,7 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Live Demo</a>
+                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
                 </button>
               </div>
               <div class="skill-link">
@@ -740,7 +740,7 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Live Demo</a>
+                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
                 </button>
               </div>
               <div class="skill-link">
@@ -910,7 +910,7 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Live Demo</a>
+                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
                 </button>
               </div>
               <div class="skill-link">
@@ -1072,7 +1072,7 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Live Demo</a>
+                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
                 </button>
               </div>
               <div class="skill-link">
