--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row sub-hdr">
         <div class="col-12 col-sm-12 d-flex justify-content-center align-items-center order-0 bx-1">
           <div class="info-skills">
-            <h2>Info & Skills</h2>
+            <h2>About</h2>
           </div>
         </div>
         <div class="col-12 col-sm-12 col-lg-6 sub-cover d-flex justify-content-center align-items-center order-2 bx-2">
