--- a/index.html
+++ b/index.html
@@ -246,12 +246,10 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
-                </button>
+                <a class="btn btn-1" href="#">Go Live</a>
               </div>
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Source Code</a>
-                </button>
+                <a class="btn btn-1" href="#">Source Code</a>
               </div>
             </div>
           </div>
