working on images of projects

--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
       <div class="row row-cols-1 justify-content-center pjct-cont">
         <div class="pjct-box radius-r d-flex flex-row">
           <div class="col-6 pjct-back d-none d-lg-block d-xl-block">
-            <div class="bckg-img">
-            </div>
+            <div class="bckg-img"></div>
           </div>
           <div class="col-12 col-lg-6 pjct-content brdr-bckg-l-txt-r d-flex flex-column justify-content-center align-items-center">
             <h4>Moto Rocket Mx</h4>
