fixed buttons and added gradiend effect

--- a/index.html
+++ b/index.html
@@ -405,12 +405,10 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
-                </button>
+                <a class="btn btn-1" href="#">Go Live</a>
               </div>
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Source Code</a>
-                </button>
+                <a class="btn btn-1" href="#">Source Code</a>
               </div>
             </div>
           </div>
@@ -575,12 +573,10 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
-                </button>
+                <a class="btn btn-1" href="#">Go Live</a>
               </div>
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Source Code</a>
-                </button>
+                <a class="btn btn-1" href="#">Source Code</a>
               </div>
             </div>
           </div>
@@ -737,12 +733,10 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
-                </button>
+                <a class="btn btn-1" href="#">Go Live</a>
               </div>
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Source Code</a>
-                </button>
+                <a class="btn btn-1" href="#">Source Code</a>
               </div>
             </div>
           </div>
@@ -907,12 +901,10 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
-                </button>
+                <a class="btn btn-1" href="#">Go Live</a>
               </div>
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Source Code</a>
-                </button>
+                <a class="btn btn-1" href="#">Source Code</a>
               </div>
             </div>
           </div>
@@ -1069,12 +1061,10 @@
             </div>
             <div class="pjct-links d-flex flex-row">
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Go Live</a>
-                </button>
+                <a class="btn btn-1" href="#">Go Live</a>
               </div>
               <div class="skill-link">
-                <button type="button" class="btn btn-primary"><a href="#">Source Code</a>
-                </button>
+                <a class="btn btn-1" href="#">Source Code</a>
               </div>
             </div>
           </div>
