svgs addedo to links on go live and source code

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
               officia quia similique optio?
             </p>
-            <div class="pjct-skills d-flex flex-row">
+            <div class="pjct-skills d-flex flex-row justify-content-center align-items-center">
               <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-center align-items-center">
                   <div class="skill-logo d-flex flex-column justify-content-center align-items-center">
