Added the next web cone

--- a/index.html
+++ b/index.html
@@ -422,12 +422,12 @@
           </div>
         </div>
         <div class="pjct-box radius-r d-flex flex-row">
-          <div class="col-6 pjct-back d-none d-lg-block d-xl-block">
-            <div class="bckg-img">
+          <div class="col-6 pjct-back-tnw d-none d-lg-block d-xl-block">
+            <div class="bckg-img-tnw">
             </div>
           </div>
           <div class="col-12 col-lg-6 pjct-content brdr-bckg-l-txt-r d-flex flex-column justify-content-center align-items-center">
-            <h4>Moto Rocket Mx</h4>
+            <h4>The Next Web Clone</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
               Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
               officia quia similique optio?
