Added newsweek project

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </div>
         <div class="pjct-box radius-l d-flex flex-row">
           <div class="col-12 col-lg-6 pjct-content brdr-txt-l-bckg-r d-flex flex-column justify-content-center align-items-center">
-            <h4>Members Only</h4>
+            <h4>Newsweek Clone</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
               Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
               officia quia similique optio?
@@ -416,8 +416,8 @@
               </div>
             </div>
           </div>
-          <div class="col-6 pjct-back-memb d-none d-lg-block d-xl-block">
-            <div class="bckg-img-memb">
+          <div class="col-6 pjct-back-news d-none d-lg-block d-xl-block">
+            <div class="bckg-img-news">
             </div>
           </div>
         </div>
@@ -587,7 +587,7 @@
         </div>
         <div class="pjct-box radius-l d-flex flex-row">
           <div class="col-12 col-lg-6 pjct-content brdr-txt-l-bckg-r d-flex flex-column justify-content-center align-items-center">
-            <h4>Moto Rocket Mx</h4>
+            <h4>Members Only</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
               Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
               officia quia similique optio?
@@ -744,8 +744,8 @@
               </div>
             </div>
           </div>
-          <div class="col-6 pjct-back d-none d-lg-block d-xl-block">
-            <div class="bckg-img">
+          <div class="col-6 pjct-back-memb d-none d-lg-block d-xl-block">
+            <div class="bckg-img-memb">
             </div>
           </div>
         </div>
