--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
         </div>
         <div class="pjct-box radius-l d-flex flex-row">
           <div class="col-12 col-lg-6 pjct-content brdr-txt-l-bckg-r d-flex flex-column justify-content-center align-items-center">
-            <h4>Moto Rocket Mx</h4>
+            <h4>Apple 2014 Clone</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
               Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
               officia quia similique optio?
@@ -1072,8 +1072,8 @@
               </div>
             </div>
           </div>
-          <div class="col-6 pjct-back d-none d-lg-block d-xl-block">
-            <div class="bckg-img">
+          <div class="col-6 pjct-back-apple d-none d-lg-block d-xl-block">
+            <div class="bckg-img-apple">
             </div>
           </div>
         </div>
