--- a/index.html
+++ b/index.html
@@ -1080,8 +1080,15 @@
       <!-- #endregion -->
 
       <!-- #region cntct-cont -->
-      <div class="row cntct-cont">
+      <div class="row cntct-cont pjct-title">
+        <div class="col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+          <div class="projects">
+            <h2>Contact</h2>
+          </div>
+          <div class="cntct-info">
 
+          </div>
+        </div>
       </div>
       <!-- #endregion -->
   </main>
