Styled pre footer secton

--- a/index.html
+++ b/index.html
@@ -1102,11 +1102,11 @@
       <!-- #region cntct-cont -->
       <div class="row cntct-cont pjct-title">
         <div class="col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
-          <div class="projects">
+          <div class="contacts">
             <h2>Contact</h2>
           </div>
-          <div class="projects">
-            <p>If you want to know more about me or my work, feel free to contact me on ⬇️ </p>
+          <div class="contacts">
+            <p>If you want to know more about me or my work, feel free to contact me on </p>
           </div>
           <div class="cntct-info">
             <ul>
