footer elements added

--- a/index.html
+++ b/index.html
@@ -1122,8 +1122,27 @@
       <!-- #endregion -->
   </main>
   <!-- #endregion -->
+
+  <!-- #region footer-cont -->
   <footer class="container footr-cont">
+    <!-- #region footer-row-->
+    <div class="row">
+      <div class="made-by col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+        <p>Made by David García</p>
+      </div>
+      <div class="credits-to col-12 col-sm-12 d-flex justify-content-start align-items-center">
+        <ul>
+          <li>Crafted using <a target="_blank"  href="https://getbootstrap.com/">Boostrap</a>, <a target="_blank"  href="https://simpleicons.org/">Simple Icons</a> and <a target="_blank"  href="https://code.visualstudio.com/">VSC</a>.</li>
+          <li>Illustrations by <a target="_blank"  href="https://dribbble.com/thierryfousse">Thierry Fousse</a></li>
+          <li>Mockups generated using <a target="_blank"  href="https://mockuper.net">Mockuper</a></li>
+        </ul>
+        <p></p>
+      </div>
+    </div>
+    <!-- #endregion -->
   </footer>
+  <!-- #endregion -->
+
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
