--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
     <!-- #region footer-row-->
     <div class="row">
       <div class="made-by col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
-        <p>Made by David García</p>
+        <p>Made by David García © 2020</p>
       </div>
       <div class="credits-to col-12 col-sm-12 d-flex justify-content-start align-items-center">
         <ul>
