Added bckg to about row

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 
       <!-- #region sub-hdr -->
       <div class="row sub-hdr">
-        <div class="col-12 col-sm-12 d-flex justify-content-center align-items-center order-0 bx-1">
-          <div class="info-skills">
-            <h2>About</h2>
+        <div class="bx-1 col-12 col-sm-12 d-flex justify-content-center align-items-center order-0">
+          <div class="bx-into-1 col-12 col-sm-12 d-flex justify-content-center align-items-center">
+            <div class="info-skills">
+              <h2>About</h2>
+            </div>
           </div>
         </div>
         <div class="col-12 col-sm-12 col-lg-6 sub-cover d-flex justify-content-center align-items-center order-2 bx-2">
@@ -1135,6 +1137,7 @@
           <li>Crafted using <a target="_blank"  href="https://getbootstrap.com/">Boostrap</a>, <a target="_blank"  href="https://simpleicons.org/">Simple Icons</a> and <a target="_blank"  href="https://code.visualstudio.com/">VSC</a>.</li>
           <li>Illustrations by <a target="_blank"  href="https://dribbble.com/thierryfousse">Thierry Fousse</a></li>
           <li>Mockups generated using <a target="_blank"  href="https://mockuper.net">Mockuper</a></li>
+          <li>Illustrations by <a target="_blank"  href="https://icons8.com">Ouch.pics</a></li>
         </ul>
         <p></p>
       </div>
