--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <!-- #region proj-title -->
       <div class="row pjct-title">
-        <div class="col-12 col-sm-12 d-flex justify-content-center align-items-center order-0 bx-1">
+        <div class="pjct-box col-12 col-sm-12 d-flex justify-content-center align-items-center order-0">
           <div class="projects">
             <h2>Projects</h2>
           </div>
@@ -1102,8 +1102,8 @@
       <!-- #endregion -->
 
       <!-- #region cntct-cont -->
-      <div class="row cntct-cont pjct-title">
-        <div class="col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+      <div class="row cntct-cont">
+        <div class="cntct-box col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
           <div class="contacts">
             <h2>Contact</h2>
           </div>
