--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">🚀&nbsp;Projects</a>
+            <a class="nav-link" href="#projects">🚀&nbsp;Projects</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">📝&nbsp;Contact</a>
@@ -82,7 +82,7 @@
       <!-- #region proj-title -->
       <div class="row pjct-title">
         <div class="pjct-box col-12 col-sm-12 d-flex justify-content-center align-items-center order-0">
-          <div class="projects">
+          <div id="projects" class="projects">
             <h2>Projects</h2>
           </div>
         </div>
@@ -1135,9 +1135,8 @@
       <div class="credits-to col-12 col-sm-12 d-flex justify-content-start align-items-center">
         <ul>
           <li>Crafted using <a target="_blank"  href="https://getbootstrap.com/">Boostrap</a>, <a target="_blank"  href="https://simpleicons.org/">Simple Icons</a> and <a target="_blank"  href="https://code.visualstudio.com/">VSC</a>.</li>
-          <li>Illustrations by <a target="_blank"  href="https://dribbble.com/thierryfousse">Thierry Fousse</a></li>
+          <li>Illustrations by <a target="_blank"  href="https://dribbble.com/thierryfousse">Thierry Fousse</a> and <a target="_blank"  href="https://icons8.com">Ouch.pics</a>.</li>
           <li>Mockups generated using <a target="_blank"  href="https://mockuper.net">Mockuper</a></li>
-          <li>Illustrations by <a target="_blank"  href="https://icons8.com">Ouch.pics</a></li>
         </ul>
         <p></p>
       </div>
@@ -1150,5 +1149,6 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="assets/js/scrolling_a.js"></script>
 </body>
 </html>
