--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
+            <a class="nav-link" href="#about">🤓&nbsp;About</a>
+          </li>
+          <li class="nav-item active">
             <a class="nav-link" href="#projects">🚀&nbsp;Projects</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">📝&nbsp;Contact</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">🤓&nbsp;About</a>
+            <a class="nav-link" href="#contact">📝&nbsp;Contact</a>
           </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
       <!-- #endregion -->
 
       <!-- #region sub-hdr -->
-      <div class="row sub-hdr">
+      <div id="about" class="row sub-hdr">
         <div class="bx-1 col-12 col-sm-12 d-flex justify-content-center align-items-center order-0">
           <div class="bx-into-1 col-12 col-sm-12 d-flex justify-content-center align-items-center">
             <div class="info-skills">
@@ -1102,7 +1102,7 @@
       <!-- #endregion -->
 
       <!-- #region cntct-cont -->
-      <div class="row cntct-cont">
+      <div id="contact" class="row cntct-cont">
         <div class="cntct-box col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
           <div class="contacts">
             <h2>Contact</h2>
