Edited some bckgs

--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
           <div class="contacts">
             <h2>Contact</h2>
           </div>
-          <div class="contacts">
+          <div class="contacts d-flex justify-content-center align-items-center">
             <p>If you want to know more about me or my work, feel free to contact me on </p>
           </div>
           <div class="cntct-info">
