--- a/index.html
+++ b/index.html
@@ -2431,7 +2431,7 @@
         <div
           class="made-by col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center"
         >
-          <p>Made by David García © 2020</p>
+          <p>Made by David Elí Martínez © 2020</p>
         </div>
         <div
           class="credits-to col-12 col-sm-12 d-flex justify-content-start align-items-center"
