--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div
           class="col-md-12 d-flex flex-column justify-content-center align-items-center"
         >
-          <h1>David Elí Martínez 👨🏻‍💻</h1>
+          <h1>David Martínez 👨🏻‍💻</h1>
           <h3>
             I'm a Full Stack Web Developer, My passion is to create, innovate,
             build and learn Tech. 🤖❤️🎯
@@ -2352,7 +2352,7 @@
                 <a
                   class="btn btn-1"
                   target="_blank"
-                  href="https://www.linkedin.com/in/davideligarcia/"
+                  href="https://www.linkedin.com/in/davidelimartinez/"
                   ><svg
                     class="cntct-svg"
                     role="img"
@@ -2431,7 +2431,7 @@
         <div
           class="made-by col-12 col-sm-12 d-flex flex-column justify-content-center align-items-center"
         >
-          <p>Made by David Elí Martínez © 2020</p>
+          <p>Made by David Martínez © 2020</p>
         </div>
         <div
           class="credits-to col-12 col-sm-12 d-flex justify-content-start align-items-center"
