Added images for weather app project

--- a/index.html
+++ b/index.html
@@ -730,13 +730,13 @@
               </div>
             </div>
           </div>
-          <div class="col-6 pjct-back-memb d-none d-lg-block d-xl-block">
-            <div class="bckg-img-memb"></div>
+          <div class="col-6 pjct-back-poke d-none d-lg-block d-xl-block">
+            <div class="bckg-img-poke"></div>
           </div>
         </div>
         <div class="pjct-box radius-r d-flex flex-row">
-          <div class="col-6 pjct-back-rockt d-none d-lg-block d-xl-block">
-            <div class="bckg-img-rockt"></div>
+          <div class="col-6 pjct-back-book d-none d-lg-block d-xl-block">
+            <div class="bckg-img-book"></div>
           </div>
           <div
             class="col-12 col-lg-6 pjct-content brdr-bckg-l-txt-r d-flex flex-column justify-content-center align-items-center"
@@ -1550,13 +1550,13 @@
               </div>
             </div>
           </div>
-          <div class="col-6 pjct-back-memb d-none d-lg-block d-xl-block">
-            <div class="bckg-img-memb"></div>
+          <div class="col-6 pjct-back-bal d-none d-lg-block d-xl-block">
+            <div class="bckg-img-bal"></div>
           </div>
         </div>
         <div class="pjct-box radius-r d-flex flex-row">
-          <div class="col-6 pjct-back-rockt d-none d-lg-block d-xl-block">
-            <div class="bckg-img-rockt"></div>
+          <div class="col-6 pjct-back-fb d-none d-lg-block d-xl-block">
+            <div class="bckg-img-fb"></div>
           </div>
           <div
             class="col-12 col-lg-6 pjct-content brdr-bckg-l-txt-r d-flex flex-column justify-content-center align-items-center"
@@ -2493,8 +2493,8 @@
               </div>
             </div>
           </div>
-          <div class="col-6 pjct-back-memb d-none d-lg-block d-xl-block">
-            <div class="bckg-img-memb"></div>
+          <div class="col-6 pjct-back-weather d-none d-lg-block d-xl-block">
+            <div class="bckg-img-weather"></div>
           </div>
         </div>
         <div class="pjct-box radius-r d-flex flex-row">
