Updated and corrected portfolio

--- a/index.html
+++ b/index.html
@@ -230,8 +230,12 @@
           >
             <h4>Poke Teka Mx</h4>
             <p>
-              A Pokémon guide where you can find great and vast information
-              about Pokémon. Built with React & Redux.
+              A web application where you can find great information about
+              Pokémon, it's based on a SPA that dynamically requests and feeds
+              on information extracted from different API endpoints. <br />
+              It displays multiple information within tables and metrics that
+              reflect the values obtained from the API. <br />
+              Built with:
             </p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
@@ -743,10 +747,10 @@
           >
             <h4>Bookstore cms</h4>
             <p>
-              This is a web app built with react & redux to allow users to keep
-              a record of the readings they take, the results are displayed
-              through a metric, and users can create, delete and update their
-              records.
+              An application that allows users to keep track of their progress
+              in reading their favorite books. The application displays a
+              dynamic graph that shows the progress between other
+              functionalities.
             </p>
             <div
               class="pjct-skills d-flex flex-row justify-content-center align-items-center"
@@ -1122,10 +1126,11 @@
           >
             <h4>Balance Control API</h4>
             <p>
-              This is an API developed with rails in order to allow front end
-              developers to access a backend with everything they need to start
-              working in a simple and easy way. Some of the main features are:
-              Admin user, Login, Sign Up, Token authentication, Serialization.
+              This is an API developed with rails to allow front end developers
+              to access a backend with everything they need to start working in
+              a simple and easy way. Some of the main features are: User roles,
+              Log In, Sign Up, Serialization, Authentication and Authorization
+              service.
             </p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
@@ -1563,10 +1568,10 @@
           >
             <h4>Facebook Clone</h4>
             <p>
-              A legacy rails web app that allows users to use the basic
-              functionalities of a social network such as add friends, a feed in
-              home page with recent posts from friends, administrator actions
-              among others.
+              A legacy rails web application with the mainstream functionalities
+              of a social network such as user roles, friendships, profile page,
+              a feed that has recent posts from friends, who to add, likes, and
+              administrator actions.
             </p>
             <div
               class="pjct-skills d-flex flex-row justify-content-center align-items-center"
@@ -2016,9 +2021,9 @@
           >
             <h4>Weather App</h4>
             <p>
-              A simple web app made with JavaScript, Webpack, and WeatherAPI in
-              order to allow users check the current weather of a specified
-              location. I also implemented some cool animations using promises.
+              A simple web app made with JavaScript, Webpack, and Weather API to
+              allow users to check the current weather at a specified location
+              with some cool animations!
             </p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
@@ -2506,9 +2511,10 @@
           >
             <h4>Moto Rocket Mx</h4>
             <p>
-              A legacy social web app with the main functionalities like posts,
-              follow users also have a feed with the last posts made by their
-              followed users, built with Rails, Rspec & Sass.
+              A legacy social web app with the main functionalities of a social
+              web application such as posts, likes, follow users also have a
+              feed with the latest posts made by their followed users, among
+              other features.
             </p>
             <div
               class="pjct-skills d-flex flex-row justify-content-center align-items-center"
