Updated projects sections

--- a/index.html
+++ b/index.html
@@ -751,6 +751,7 @@
               in reading their favorite books. The application displays a
               dynamic graph that shows the progress between other
               functionalities.
+              <br />Built with:
             </p>
             <div
               class="pjct-skills d-flex flex-row justify-content-center align-items-center"
@@ -1131,6 +1132,7 @@
               a simple and easy way. Some of the main features are: User roles,
               Log In, Sign Up, Serialization, Authentication and Authorization
               service.
+              <br />Built with:
             </p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
@@ -1572,6 +1574,7 @@
               of a social network such as user roles, friendships, profile page,
               a feed that has recent posts from friends, who to add, likes, and
               administrator actions.
+              <br />Built with:
             </p>
             <div
               class="pjct-skills d-flex flex-row justify-content-center align-items-center"
@@ -2024,6 +2027,7 @@
               A simple web app made with JavaScript, Webpack, and Weather API to
               allow users to check the current weather at a specified location
               with some cool animations!
+              <br />Built with:
             </p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
@@ -2515,6 +2519,7 @@
               web application such as posts, likes, follow users also have a
               feed with the latest posts made by their followed users, among
               other features.
+              <br />Built with:
             </p>
             <div
               class="pjct-skills d-flex flex-row justify-content-center align-items-center"
@@ -2966,6 +2971,7 @@
             <p>
               A full responsive webpage based on "Newsweek website", mostly
               built using bootstrap framework.
+              <br />Built with:
             </p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
@@ -3297,6 +3303,7 @@
             <p>
               A full responsive webpage clone based on the webpage "The Next
               Web"
+              <br />Built with:
             </p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
